--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <nav class="navbar fixed-top navbar-expand-lg navbar-light">
         <div class="container">
           <a class="navbar-brand" href="#"
-            ><img src="/assets/img/logo.png" height="50" alt="" />
+            ><img src="/assets/img/logo.png" height="45" alt="" />
           </a>
           <button
             class="navbar-toggler"
@@ -89,7 +89,7 @@
                 <a href="#" class="btn btn-success">Chat Whatsapp</a>
               </div>
             </div>
-            <div class="col-12 col-md-4">
+            <div class="col-12 col-md-4 my-5">
               <div class="text-center">
                 <img src="/assets/img/template-hp.png" height="500px" alt="" />
               </div>
