--- a/index.html
+++ b/index.html
@@ -91,7 +91,12 @@
             </div>
             <div class="col-12 col-md-4 my-5">
               <div class="text-center">
-                <img src="/assets/img/template-hp.png" height="500px" alt="" />
+                <img
+                  src="/assets/img/img-1.png"
+                  height="500px"
+                  alt="phone"
+                  class="review"
+                />
               </div>
             </div>
           </figcaption>
